# tcc

./: README.md
code/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
code/code/: app.py  config.py  image_processing.py  legacy.py  texts.py  utils.py
code/notebooks/: Untitled.ipynb  Untitled4.ipynb  all_exp.ipynb  e1.ipynb  images.ipynb  images2doc.ipynb  mser.ipynb
