[tool.poetry]
name = "code"
version = "0.1.0"
description = ""
authors = ["Francisco Vicenzi <cchenzi@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.19.4"
pandas = "^1.2.0"
streamlit = "^0.73.1"
jupyterlab = "^3.0.0"
black = "^20.8b1"
pre-commit = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
